# arena-terms

./: ArenaVsDirect.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
arena-terms/: ArenaVsDirect.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
arena-terms-parser/: CHANGELOG.md  Cargo.toml  README.md
arena-terms-parser/src/: encoding.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  term.alex  token.rs
arena-terms/src/: arena.rs  display.rs  encoding.rs  error.rs  lib.rs  oper.rs  term.rs  view.rs
parlex/: Cargo.toml
src/: lib.rs
