[workspace]
members = ["arena-terms", "arena-terms-parser"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.89"
authors = ["IKH Software, Inc. <support@ikhsoftware.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/ikhomyakov/arena-terms.git"
keywords = ["term", "arena", "immutable", "parser", "prolog"]
categories = ["parsing", "data-structures"]

[workspace.dependencies]
arena-terms = { version = "0.4.0", path = "arena-terms" }
parlex = { version = "0.3.0", path = "../parlex/parlex" }
parlex-gen = { version = "0.3.0", path = "../parlex/parlex-gen" }
try-next = { version = "0.4.0", path = "../try-next" }

chrono = "0.4.42"
rand = "0.9.2"
smartstring = "1.0.1"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
include_bytes_aligned = "0.1.4"
clap = { version = "4.5.48", features = ["derive"] }
indexmap = "2.11.4"
thiserror = "2.0.17"

