[package]
name = "arena-terms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

keywords = ["prolog", "term", "arena", "immutable", "pattern-matching"]
categories = ["data-structures", "memory-management"]
description = "A lightweight, arena-backed representation of Prolog–like terms"
readme = "README.md"

[dependencies]
chrono.workspace = true
rand.workspace = true
smartstring.workspace = true
indexmap.workspace = true
thiserror.workspace = true
